--- a/roundeLayout/build.gradle
+++ b/roundeLayout/build.gradle
@@ -27,4 +27,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
