--- a/roundeLayout/build.gradle
+++ b/roundeLayout/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'skin.support:skin-support:3.1.4'
+    implementation 'skin.support:skin-support:4.0.4'
+    implementation 'skin.support:skin-support-appcompat:4.0.4'
 }
